--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,38 +1,56 @@
+version: "2"
 run:
-  timeout: 5m
-  modules-download-mode: readonly
-
+  allow-parallel-runners: true
 linters:
+  default: none
   enable:
+    - copyloopvar
+    - dupl
     - errcheck
-    - gosimple
+    - ginkgolinter
+    - goconst
+    - gocyclo
     - govet
     - ineffassign
-    - staticcheck
-    - unused
-    - gofmt
-    - goimports
+    - lll
+    - modernize
     - misspell
+    - nakedret
+    - prealloc
+    - revive
+    - staticcheck
     - unconvert
     - unparam
-    - bodyclose
-    - noctx
-    - prealloc
-
-linters-settings:
-  gofmt:
-    simplify: true
-  goimports:
-    local-prefixes: github.com/jorgelopez/rabbitmq-burst-scaler
-  misspell:
-    locale: US
-
-issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - errcheck
-        - unparam
-    - path: proto/
-      linters:
-        - all
+    - unused
+  settings:
+    revive:
+      rules:
+        - name: comment-spacings
+        - name: import-shadowing
+    modernize:
+      disable:
+        - omitzero
+  exclusions:
+    generated: lax
+    rules:
+      - linters:
+          - lll
+        path: api/*
+      - linters:
+          - dupl
+          - lll
+        path: internal/*
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
