feat: use environment variables for parsing rabbitmq connection details

--- a/charts/burst-scaler/values.yaml
+++ b/charts/burst-scaler/values.yaml
@@ -45,3 +45,15 @@ securityContext:
   capabilities:
     drop:
       - ALL
+
+# Extra environment variables
+extraEnv: []
+# Example:
+# extraEnv:
+#   - name: RABBITMQ_HOST
+#     value: "rabbitmq.example.com"
+#   - name: RABBITMQ_PASSWORD
+#     valueFrom:
+#       secretKeyRef:
+#         name: rabbitmq-credentials
+#         key: password
