--- a/charts/burst-scaler/templates/deployment.yaml
+++ b/charts/burst-scaler/templates/deployment.yaml
@@ -34,6 +34,9 @@ spec:
               value: {{ .Values.grpcPort | quote }}
             - name: LOG_LEVEL
               value: {{ .Values.logLevel | quote }}
+            {{- with .Values.extraEnv }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           securityContext:
